# Aurotax_2024

./: .gitignore
backend/: .env  Cargo.toml
backend/migrations/: 20231230050708_create_tables.sql
backend/src/: configuration.rs  database.rs  lib.rs  main.rs  routes.rs  startup.rs
backend/src/controllers/: administrator_controller.rs  authentication_controller.rs  health_check_controller.rs  mod.rs  orders_controller.rs  users_controller.rs
backend/src/core/: administrator_core.rs  authentication_core.rs  health_check_core.rs  mod.rs  orders_core.rs  users_core.rs
backend/src/data/: administrator_data.rs  authentication_data.rs  health_check_data.rs  mod.rs  orders_data.rs  users_data.rs
backend/src/entities/: mod.rs  users_entities.rs
backend/src/models/: authentication_models.rs  mod.rs  users_models.rs
backend/src/resources/: cookie_session_resources.rs  mod.rs
backend/src/utils/: cookies_utils.rs  mod.rs  validators_utils.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  settings.ts  test.tsx  test2.tsx
frontend/src/components/: Context.tsx  Error.tsx  Header.tsx  Login.tsx  Logout.tsx
frontend/src/pages/: Admin.tsx  Home.tsx
frontend/src/utils/: cookies.ts  models.ts  routes.ts
