[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = [ 
    "runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono", "migrate" 
] }
once_cell = "1.18"
serde = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.108"
argon2 = { version = "0.5.2", features = ["std"] }
paypal-rs = "0.2.5"
reqwest = { version = "0.11", features = ["json"] }
actix-cors = "0.6.5"
actix-files = "0.6.5"